@@ -24,6 +24,7 @@ Enhancements
 Version 1.9.1 released on 2010-09-22
 
 New Hardware Support
+- HP ProCurve MSM710 Mobility Controller
 - Extreme XOS Port Security (MAC address lockdown) and Voice over IP support 
   (feature sponsored by Extreme Networks)
 - Nortel ERS 2500 Series Port security and Voice over IP support
